--- a/template-2/.gitignore
+++ b/template-2/.gitignore
@@ -1,6 +1,3 @@
-# Generated content and temporary files
-/public/videos/
-/public/temp/
-# Backup files
-*.new
-*.bak
+# Generated files
+public/videos/*
+public/temp/*
